--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
+sudo: required
+addons:
+  chrome: stable
+
 language: dart
 dart:
-  # - stable # there's no Dart 2 on the stable channel yet
-  - dev
+# - stable # there's no Dart 2 on the stable channel yet
+- dev
 script: ./tool/presubmit.sh
