--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,3 +18,5 @@ dev_dependencies:
   test: ">=0.12.0 <2.0.0"
   yaml: ">=2.1.0 <3.0.0"
   mockito: ">=2.0.0 <4.0.0"
+  flutter_test:
+    sdk: flutter
