--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: sentry
-version: 2.3.1
+version: 3.0.0-dev0
 description: A pure Dart Sentry.io client.
 author: Flutter Authors <flutter-dev@googlegroups.com>
 homepage: https://github.com/flutter/sentry
