--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,5 +1,6 @@
 name: sentry_flutter_example
 description: Demonstrates how to use the sentry_flutter plugin.
+version: 0.1.2+3
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
