--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -1,13 +1,16 @@
 buildscript {
-    ext.kotlin_version = '1.3.50'
+    ext.kotlin_version = '1.4.0'
     repositories {
         google()
         jcenter()
+        mavenCentral()
     }
 
     dependencies {
+        classpath 'io.sentry:sentry-android-gradle-plugin:1.7.35'
         classpath 'com.android.tools.build:gradle:3.5.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.ydq.android.gradle.build.tool:nativeBundle:1.0.6'
     }
 }
 
