--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -24,9 +24,19 @@ if (flutterVersionName == null) {
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
+apply plugin: 'com.ydq.android.gradle.native-aar.import'
+apply plugin: 'io.sentry.android.gradle'
 
 android {
-    compileSdkVersion 28
+    compileOptions {
+        sourceCompatibility = JavaVersion.VERSION_1_8
+        targetCompatibility = JavaVersion.VERSION_1_8
+    }
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8
+    }
+
+    compileSdkVersion 29
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
@@ -39,9 +49,26 @@ android {
     defaultConfig {
         applicationId "io.sentry.flutter.example"
         minSdkVersion 16
-        targetSdkVersion 28
+        targetSdkVersion 29
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+
+        externalNativeBuild {
+            cmake {
+                arguments.add(0, "-DANDROID_STL=c++_static")
+            }
+        }
+
+        ndk {
+            abiFilters("x86", "armeabi-v7a", "x86_64", "arm64-v8a")
+        }
+    }
+    ndkVersion "21.3.6528147"
+
+    externalNativeBuild {
+        cmake {
+            setPath("CMakeLists.txt")
+        }
     }
 
     buildTypes {
@@ -57,4 +84,12 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'androidx.work:work-runtime:2.4.0'
+    implementation 'androidx.work:work-runtime-ktx:2.4.0'
+    implementation "androidx.annotation:annotation:1.1.0"
+}
+
+sentry {
+    uploadNativeSymbols true
+    includeNativeSources true
 }
