--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,9 @@
 name: sentry
 version: 4.0.0
 description: >
-  A crash reporting library for for Dart that sends crash reports to Sentry.io.
-  This library supports Dart VM, and Flutter for mobile, web, and desktop.
-homepage: https://github.com/flutter/sentry
+  A crash reporting library for Dart that sends crash reports to Sentry.io.
+  This library supports Dart Native, and Flutter for mobile, web, and desktop.
+homepage: https://github.com/getsentry/sentry-dart
 
 environment:
   sdk: ">=2.0.0 <3.0.0"
