--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -66,12 +66,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: flutter folder
-        run: cd flutter
       - uses: axel-op/dart-package-analyzer@v3
         id: analysis
         with:
           githubToken: ${{ secrets.GITHUB_TOKEN }}
+          relativePath: flutter/
       - name: Check scores
         env:
           TOTAL: ${{ steps.analysis.outputs.total }}
