--- a/dart/pubspec.yaml
+++ b/dart/pubspec.yaml
@@ -12,11 +12,10 @@ dependencies:
   http: ">=0.11.0 <2.0.0"
   meta: ">=1.0.0 <2.0.0"
   stack_trace: ">=1.0.0 <2.0.0"
-  usage: ">=3.0.0 <4.0.0"
-  pedantic: ">=1.8.0 <2.0.0"
+  uuid: "^2.2.2"
 
 dev_dependencies:
-  args: ">=0.13.0 <2.0.0"
+  mockito: ">=2.0.0 <4.0.0"
+  pedantic: ">=1.8.0 <2.0.0"
   test: ">=0.12.0 <2.0.0"
   yaml: ">=2.1.0 <3.0.0"
-  mockito: ">=2.0.0 <4.0.0"
