--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -44,10 +44,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: axel-op/dart-package-analyzer@v2
+      - uses: axel-op/dart-package-analyzer@v3
         id: analysis
         with:
           githubToken: ${{ secrets.GITHUB_TOKEN }}
+          relativePath: dart/
       - name: Check scores
         # TODO: Once 1.0.0 lands, change min maintenance points to 100
         run: |
