--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -13,7 +13,8 @@ dependencies:
     sdk: flutter
   flutter_web_plugins:
     sdk: flutter
-  sentry: ^3.0.1
+  sentry: #3.0.1
+    path: ../dart
 
 dev_dependencies:
   flutter_test:
