--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -1,4 +1,4 @@
-name: Flutter
+name: sentry-flutter
 on:
   push:
     branches:
@@ -75,10 +75,9 @@ jobs:
         env:
           TOTAL: ${{ steps.analysis.outputs.total }}
           TOTAL_MAX: ${{ steps.analysis.outputs.total_max }}
-        # TODO: Once 1.0.0 lands, change to 100 
         run: |
           PERCENTAGE=$(( $TOTAL * 100 / $TOTAL_MAX ))
-          if (( $PERCENTAGE < 95 ))
+          if (( $PERCENTAGE < 90 ))
           then
             echo Score too low!
             exit 1
