--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -11,6 +11,8 @@ jobs:
   build:
     name: Build ${{matrix.sdk}} on ${{matrix.os}}
     runs-on: ${{ matrix.os }}
+    env:
+      working-directory: ./dart
     strategy:
       fail-fast: false
       matrix:
@@ -32,24 +34,16 @@ jobs:
           with:
             release-channel: ${{ matrix.sdk }}
         - uses: actions/checkout@v2
-        - run: |
-            cd dart
-            pub get
+        - run: pub get
         - name: Test on Dart VM and collect code coverage
-          run: |
-            cd dart
-            pub run test_coverage
+          uses: stelynx/dart-full-coverage@v1.0.3
+          with:
+            package: sentry
         - uses: codecov/codecov-action@v1
         - name: Test on Chrome
-          run:  |
-            cd dart
-            pub run test -p vm test/*
-        - run:  |
-            cd dart
-            dartanalyzer --fatal-warnings ./
-        - run:  |
-            cd dart
-            dartfmt -n --set-exit-if-changed ./
+          run: pub run test -p chrome test/*
+        - run: dartanalyzer --fatal-warnings ./
+        - run: dartfmt -n --set-exit-if-changed ./
   package-analysis:
     runs-on: ubuntu-latest
     steps:
