--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -40,6 +40,7 @@ jobs:
           uses: stelynx/dart-full-coverage@v1.0.3
           with:
             package: sentry
+            path: dart # seems the action does a cd {BLA} and ignores the workdir we set
         - uses: codecov/codecov-action@v1
         - name: Test on Chrome
           run: pub run test -p chrome test/*
