--- a/dart/pubspec.yaml
+++ b/dart/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   meta: ^1.0.0
   stack_trace: ^1.0.0
   uuid: ^2.0.0
+  collection: ^1.14.13
 
 dev_dependencies:
   mockito: ^4.1.1
