--- a/dart/examples/web_example/pubspec.yaml
+++ b/dart/examples/web_example/pubspec.yaml
@@ -8,7 +8,7 @@ environment:
 
 dependencies:
   sentry:
-    path: /Users/rxlabz/projects/sentry/sentry-dart/dart
+    path: ../..
 
 dev_dependencies:
   build_runner: ^1.10.0
