--- a/dart/examples/web_example/pubspec.yaml
+++ b/dart/examples/web_example/pubspec.yaml
@@ -4,7 +4,7 @@ description: An absolute bare-bones web app.
 #homepage: https://www.example.com
 
 environment:
-  sdk: '>=2.0.0 <3.0.0'
+  sdk: ^2.0.0
 
 dependencies:
   sentry:
