--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -36,7 +36,7 @@ jobs:
             release-channel: ${{ matrix.sdk }}
         - uses: actions/checkout@v2
         - run: pub get
-        - name: Test on Chrome
+        - name: Test (VM and browser)
           run: pub run test test
         - run: dartanalyzer --fatal-warnings ./
         - run: dartfmt -n --set-exit-if-changed ./
