--- a/flutter/android/src/main/AndroidManifest.xml
+++ b/flutter/android/src/main/AndroidManifest.xml
@@ -1,3 +1,1 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="io.sentry.flutter">
-</manifest>
+<manifest package="io.sentry.flutter" />
