--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
     sdk: flutter
   sentry: #^4.0.0 uncomment before publishing
     path: ../dart
+  #device_info: ^1.0.0
+  package_info: ^0.4.0
 
 dev_dependencies:
   flutter_test:
