--- a/flutter/example/android/app/build.gradle
+++ b/flutter/example/android/app/build.gradle
@@ -45,9 +45,9 @@ android {
         main.java.srcDirs += 'src/main/kotlin'
     }
 
-    lintOptions {
-        disable 'InvalidPackage'
-    }
+//    lintOptions {
+//        disable 'InvalidPackage'
+//    }
 
     defaultConfig {
         applicationId "io.sentry.flutter.example"
@@ -86,7 +86,7 @@ flutter {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation 'androidx.work:work-runtime:2.4.0'
     implementation 'androidx.work:work-runtime-ktx:2.4.0'
     implementation "androidx.annotation:annotation:1.1.0"
