--- a/flutter/example/android/app/src/main/AndroidManifest.xml
+++ b/flutter/example/android/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
+        android:allowBackup="false"
         android:name="io.flutter.app.FlutterApplication"
         android:label="sentry_flutter_example"
         android:icon="@mipmap/ic_launcher">
