--- a/flutter/android/src/main/AndroidManifest.xml
+++ b/flutter/android/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
         <provider
             android:name="io.sentry.android.core.SentryInitProvider"
             android:authorities="${applicationId}.SentryInitProvider"
+            android:exported="false"
             tools:node="remove" />
     </application>
 </manifest>
