--- a/flutter/example/android/sentry.properties
+++ b/flutter/example/android/sentry.properties
@@ -1,5 +1,5 @@
-defaults.project=flutter
-defaults.org=sentry-test
+defaults.project=sentry-flutter
+defaults.org=sentry-sdks
 #auth.token= set in the file ~/.sentryclirc with the content:
 #[auth]
 #token=528be1f...
