--- a/flutter/android/build.gradle
+++ b/flutter/android/build.gradle
@@ -33,6 +33,11 @@ android {
     defaultConfig {
         minSdkVersion 16
         targetSdkVersion 30
+
+        ndk {
+            // Flutter does not currently support building for x86 Android (See Issue 9253).
+            abiFilters("armeabi-v7a", "x86_64", "arm64-v8a")
+        }
     }
 
     compileOptions {
