--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -1,6 +1,6 @@
 name: sentry_flutter
+version: 4.0.0-alpha.2
 description: Sentry SDK for Flutter. This package aims to support different Flutter targets by relying on the many platforms supported by Sentry with native SDKs.
-version: 0.0.1
 homepage: https://docs.sentry.io/platforms/flutter/
 repository: https://github.com/getsentry/sentry-dart
 
@@ -13,8 +13,10 @@ dependencies:
     sdk: flutter
   flutter_web_plugins:
     sdk: flutter
-  sentry: #^4.0.0 uncomment before publishing
-    path: ../dart
+  sentry: 4.0.0-alpha.2
+    # TODO: we need the specific version for publishing it, but the relative path for development.
+    # Figure out how to do it via Craft for releases.
+    # path: ../dart
   package_info: ^0.4.0
 
 dev_dependencies:
