--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -1,5 +1,5 @@
 name: sentry_flutter
-version: 4.0.0-alpha.2
+version: 4.0.0-alpha.3
 description: Sentry SDK for Flutter. This package aims to support different Flutter targets by relying on the many platforms supported by Sentry with native SDKs.
 homepage: https://docs.sentry.io/platforms/flutter/
 repository: https://github.com/getsentry/sentry-dart
@@ -13,10 +13,10 @@ dependencies:
     sdk: flutter
   flutter_web_plugins:
     sdk: flutter
-  sentry: ">=4.0.0-alpha.2 <4.1.0"
+  sentry: #">=4.0.0-alpha.3 <4.1.0"
     # TODO: we need the specific version for publishing it, but the relative path for development.
     # Figure out how to do it via Craft for releases.
-    # path: ../dart
+    path: ../dart
   package_info: ^0.4.0
 
 dev_dependencies:
