--- a/dart/pubspec.yaml
+++ b/dart/pubspec.yaml
@@ -2,7 +2,7 @@ name: sentry
 version: 4.0.0-alpha.3
 description: >
   A crash reporting library for Dart that sends crash reports to Sentry.io.
-  This library supports Dart Native, and Flutter for mobile, web, and desktop.
+  This library supports Dart VM and Web. For Flutter consider sentry_flutter instead.
 homepage: https://github.com/getsentry/sentry-dart
 repository: https://github.com/getsentry/sentry-dart
 
