clean: android plugin and remove deprecated classes

--- a/flutter/example/android/app/src/main/AndroidManifest.xml
+++ b/flutter/example/android/app/src/main/AndroidManifest.xml
@@ -1,27 +1,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="io.sentry.flutter.example">
-    <!-- io.flutter.app.FlutterApplication is an android.app.Application that
-         calls FlutterMain.startInitialization(this); in its onCreate method.
-         In most cases you can leave this as-is, but you if you want to provide
-         additional functionality it is fine to subclass or reimplement
-         FlutterApplication and put your custom class here. -->
-
-    <!-- To be deleted once the sentry-flutter package adds this automatically -->
-    <uses-permission android:name="android.permission.INTERNET"/>
+    package="io.sentry.samples.flutter">
 
     <application
         android:allowBackup="false"
-        android:name="io.flutter.app.FlutterApplication"
         android:label="sentry_flutter_example"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"
+        android:extractNativeLibs="true">
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
             android:theme="@style/LaunchTheme"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
             android:hardwareAccelerated="true"
-            android:windowSoftInputMode="adjustResize"
-            android:extractNativeLibs="true">
+            android:windowSoftInputMode="adjustResize">
             <!-- Specifies an Android theme to apply to this Activity as soon as
                  the Android process has started. This theme is visible to the user
                  while the Flutter UI initializes. After that, this theme continues
