--- a/flutter/example/android/app/build.gradle
+++ b/flutter/example/android/app/build.gradle
@@ -41,12 +41,8 @@ android {
 
     compileSdkVersion 30
 
-    sourceSets {
-        main.java.srcDirs += 'src/main/kotlin'
-    }
-
     defaultConfig {
-        applicationId "io.sentry.flutter.example"
+        applicationId "io.sentry.samples.flutter"
         minSdkVersion 16
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
@@ -82,6 +78,12 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+
+    lintOptions {
+        // workaround if using AGP 4.0 on release mode
+        // https://github.com/flutter/flutter/issues/58247
+        checkReleaseBuilds false
+    }
 }
 
 flutter {
@@ -90,7 +92,6 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    implementation "androidx.annotation:annotation:1.1.0"
 }
 
 // uncomment this to upload debug symbols to Sentry
