--- a/flutter/android/build.gradle
+++ b/flutter/android/build.gradle
@@ -24,6 +24,10 @@ apply plugin: 'kotlin-android'
 android {
     compileSdkVersion 30
 
+    sourceSets {
+        main.java.srcDirs += 'src/main/kotlin'
+    }
+
     defaultConfig {
         minSdkVersion 16
         targetSdkVersion 30
