--- a/flutter/example/android/app/build.gradle
+++ b/flutter/example/android/app/build.gradle
@@ -46,7 +46,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "io.sentry.flutter.example"
+        applicationId "io.sentry.samples.flutter"
         minSdkVersion 16
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
@@ -81,6 +81,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.debug
         }
+    }
+
+    lintOptions {
+        // workaround if using AGP 4.0 on release mode
+        // https://github.com/flutter/flutter/issues/58247
+        checkReleaseBuilds false
     }
 }
 
