--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -53,7 +53,7 @@ jobs:
             package: sentry_flutter
             main_dir: flutter/
         # - run: flutter analyze
-        - run: flutter test --coverage .
+          run: flutter test --coverage .
 
         - name: Upload coverage to Codecov
         - uses: codecov/codecov-action@v1
