--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -37,9 +37,26 @@ jobs:
         - uses: actions/checkout@v2
         - run: pub get
         - name: Test (VM and browser)
-          run: pub run test test
-        - run: dartanalyzer --fatal-warnings ./
-        - run: dartfmt -n --set-exit-if-changed ./
+          # consider -p "chrome,vm"
+          run: pub run test --coverage=coverage
+
+        - uses: codecov/codecov-action@v1
+          if: runner.os == 'Linux'
+          with:
+            name: sentry
+            directory: ./coverage
+
+  analyze:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: cedx/setup-dart@v2
+        with:
+          release-channel: stable
+      - uses: actions/checkout@v2
+      - run: pub get
+      - run: dartanalyzer --fatal-warnings ./
+      - run: dartfmt -n --set-exit-if-changed ./
+
   package-analysis:
     runs-on: ubuntu-latest
     steps:
