--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -37,14 +37,15 @@ jobs:
         - uses: actions/checkout@v2
         - run: pub get
         - name: Test (VM and browser)
-          # consider -p "chrome,vm"
-          run: pub run test --coverage=coverage
+          # consider -p "chrome,vm" and --coverage=coverage
+          run: pub run test test
 
-        - uses: codecov/codecov-action@v1
-          if: runner.os == 'Linux'
-          with:
-            name: sentry
-            directory: ./dart/coverage
+        # No coverage report found.
+        # - uses: codecov/codecov-action@v1
+        #   if: runner.os == 'Linux'
+        #   with:
+        #     name: sentry
+        #     directory: ./dart/coverage
 
   analyze:
     runs-on: ubuntu-latest
