--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -38,14 +38,14 @@ jobs:
         - run: pub get
         - name: Test (VM and browser)
           # consider -p "chrome,vm" and --coverage=coverage
-          run: pub run test test
+          run: pub run test --coverage=coverage
+          run: pub run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.packages --report-on=lib
 
-        # No coverage report found.
-        # - uses: codecov/codecov-action@v1
-        #   if: runner.os == 'Linux'
-        #   with:
-        #     name: sentry
-        #     directory: ./dart/coverage
+        - uses: codecov/codecov-action@v1
+          if: runner.os == 'Linux'
+          with:
+            name: sentry
+            file: ./dart/coverage/lcov.info
 
   analyze:
     runs-on: ubuntu-latest
