--- a/dart/pubspec.yaml
+++ b/dart/pubspec.yaml
@@ -20,5 +20,5 @@ dev_dependencies:
   pedantic: ^1.9.2
   test: ^1.15.4
   yaml: ^2.2.1
-  test_coverage: ^0.4.1
   collection: ^1.14.13
+  coverage: ^0.14.2
