--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -35,11 +35,11 @@ jobs:
           with:
             release-channel: ${{ matrix.sdk }}
         - uses: actions/checkout@v2
-        - run: pub get
+           run: pub get
         - name: Test (VM and browser)
           # consider -p "chrome,vm" and --coverage=coverage
-          run: pub run test --coverage=coverage
-          run: pub run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.packages --report-on=lib
+           run: pub run test --coverage=coverage
+           run: pub run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.packages --report-on=lib
 
         - uses: codecov/codecov-action@v1
           if: runner.os == 'Linux'
