--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -36,11 +36,12 @@ jobs:
             release-channel: ${{ matrix.sdk }}
         - uses: actions/checkout@v2
         - run: pub get
+        # consider -p "chrome,vm" and --coverage=coverage
         - name: Test (VM and browser)
-          # consider -p "chrome,vm" and --coverage=coverage
-          run: pub run test --coverage=coverage
-        - name: format coverage
-          run: pub run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.packages --report-on=lib
+          run: |
+            pub get
+            pub run test --coverage=coverage
+            pub run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.packages --report-on=lib
 
         - uses: codecov/codecov-action@v1
           if: runner.os == 'Linux'
