--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -81,7 +81,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
-        run: |
+      - run: |
           cd flutter
           flutter pub get
           flutter format --set-exit-if-changed .
@@ -91,7 +91,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
-        run: |
+      - run: |
           cd flutter
           flutter pub get
           flutter analyze
