--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -134,8 +134,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: brew install ktlint
-        run: ktlint --reporter=checkstyle,output=build/ktlint-report.xml || true
+      - run: |
+          brew install ktlint
+          ktlint --reporter=checkstyle,output=build/ktlint-report.xml || true
       - uses: yutailang0119/action-ktlint@v1
         with:
           xml_path: build/ktlint-report.xml
