--- a/dart/pubspec.yaml
+++ b/dart/pubspec.yaml
@@ -3,7 +3,7 @@ version: 4.0.0-alpha.3
 description: >
   A crash reporting library for Dart that sends crash reports to Sentry.io.
   This library supports Dart VM and Web. For Flutter consider sentry_flutter instead.
-homepage: https://github.com/getsentry/sentry-dart
+homepage: https://docs.sentry.io/platforms/dart/
 repository: https://github.com/getsentry/sentry-dart
 
 environment:
@@ -20,5 +20,5 @@ dev_dependencies:
   pedantic: ^1.9.2
   test: ^1.15.4
   yaml: ^2.2.1
-  test_coverage: ^0.4.1
   collection: ^1.14.13
+  coverage: ^0.14.2
