--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -24,6 +24,7 @@ dev_dependencies:
     sdk: flutter
   mockito: ^4.1.1
   test: ^1.15.4
+  pedantic: ^1.9.2
 
 flutter:
   plugin:
@@ -36,4 +37,3 @@ flutter:
       web:
         pluginClass: SentryFlutterWeb
         fileName: src/sentry_flutter_web.dart
-
