--- a/flutter/example/pubspec.yaml
+++ b/flutter/example/pubspec.yaml
@@ -16,9 +16,10 @@ dependencies:
 
   universal_platform: ^0.1.3
 
-dev_dependencies:
-  flutter_test:
-    sdk: flutter
-
 flutter:
   uses-material-design: true
+  plugin:
+    platforms:
+      web:
+        pluginClass: ExamplePluginWeb
+        fileName: example_plugin_web.dart
