--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -60,8 +60,8 @@ jobs:
       - uses: actions/checkout@v2
       - run: |
           pub get
-          dartanalyzer --fatal-warnings ./
-          dartfmt -n --set-exit-if-changed ./
+          dartanalyzer ./
+          dartfmt -n ./
 
   package-analysis:
     runs-on: ubuntu-latest
