--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -60,7 +60,7 @@ jobs:
       - uses: actions/checkout@v2
       - run: |
           pub get
-          dartanalyzer ./
+          dartanalyzer --fatal-warnings ./
           dartfmt -n ./
 
   package-analysis:
